# numf

./: README.md  meson.build
src/: array_create_mod.F90  flab_kinds_mod.f90  kinds_mod.f90  linspace.inc  logspace.inc  lstsq_mat.inc  lstsq_mod.F90  lstsq_vec.inc  main.f90  poly1d_mod.F90  polyfit.inc  polyval.inc  rtn_info_mod.f90
